--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <script type="text/javascript">
+        window.fullLogo = "<%= image_url('Satisfy_logo_with_App_name.png') %>";
+    </script>
   </head>
 
   <body>
