Add styling to sign up buttons

--- a/app/assets/stylesheets/1-Navbar-Component.scss
+++ b/app/assets/stylesheets/1-Navbar-Component.scss
@@ -5,9 +5,10 @@
   padding: 10px;
   #fullLogo {
     display: flex;
-    width: 40%;
+    width: 15%;
     height: auto;
     justify-content: flex-start;
+    padding-left: 50px;
   }
   
   .app-navbar-links {
