--- a/app/assets/stylesheets/0-Home-Component.scss
+++ b/app/assets/stylesheets/0-Home-Component.scss
@@ -1,5 +1,5 @@
-
-
-// main {
-//   background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(138, 60, 190)), to(#000))
-// }
+#splash-page {
+  // background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(138, 60, 190)), to(#000))
+  // background-image: linear-gradient(purple, black);
+  // background-color: black;
+}
