--- a/app/assets/stylesheets/0-Home-Component.scss
+++ b/app/assets/stylesheets/0-Home-Component.scss
@@ -4,6 +4,10 @@
   background: linear-gradient(106deg, rgba(147,109,134,1) 0%, rgba(147,113,156,1) 24%, rgba(136,124,192,1) 49%, rgba(113,126,196,1) 78%, rgba(90,125,190,1) 99%);
   // background-image: linear-gradient(purple, black);
   // background-color: black;
-  // width: 100%;
-  // height: 300%;
+  width: 100%;
+  // margin-top: 7%;
+  overflow: hidden;
+  padding-top: 100px;
+  position: absolute;
+  font-family: 'Montserrat', sans-serif;
 }
