Revert active_storage to normal to debug heroku

--- a/app/assets/stylesheets/3-Login-Container.scss
+++ b/app/assets/stylesheets/3-Login-Container.scss
@@ -9,6 +9,7 @@
   position: absolute;
   right: 33%;
   font-weight: 600;
+  padding-top: 75px;
   
   #login-inner-header {
     text-align: center;
