--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,12 @@
         window.fullLogo = "<%= image_url('Satisfy_logo_with_App_name.png') %>";
     </script>
     <script type="text/javascript">
-        window.fullLogoInverted = "<%= image_url('Satisfy_logo_with_App_name_inverted.png') %>";
-    </script>
-    <script type="text/javascript">
         window.userPic = "<%= image_url('User.jpeg') %>";
     </script>
     <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
   </head>
 
   <body>
