--- a/app/assets/stylesheets/0-Home-Component.scss
+++ b/app/assets/stylesheets/0-Home-Component.scss
@@ -5,6 +5,7 @@
   // background-image: linear-gradient(purple, black);
   // background-color: black;
   width: 100%;
+  height: 100%;
   // margin-top: 7%;
   overflow: hidden;
   padding-top: 100px;
