--- a/app/assets/stylesheets/2-SignUp-Container.scss
+++ b/app/assets/stylesheets/2-SignUp-Container.scss
@@ -1,4 +1,4 @@
-#session-signup {
+.session-signup {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -11,17 +11,17 @@
   font-weight: 600;
   padding-top: 50px;
 
-  #signup-inner-header {
+  .signup-inner-header {
     text-align: center;
     flex-direction: column;
     
-    #signup-greeting {
+    .signup-greeting {
       padding-bottom: 20px;
       font-weight: 700;
       font-size: 25px;
     }
     
-    #fb-signup-button {
+    .fb-signup-button {
       background-color: rgb(58, 88, 151);
       border-radius: 500px;
       font-weight: 700;
@@ -33,18 +33,18 @@
       border: none;
     }
 
-    #fb-signup-button:hover {
+    .fb-signup-button:hover {
       background-color:rgb(55, 94, 177);
       cursor: pointer;
     } 
     
-    #signup-or {
+    .signup-or {
       padding-top: 15px;
       font-size: 15px;
       color: rgb(117, 117, 117);
     }
     
-    #signup-or::before, #signup-or::after {
+    .signup-or::before, .signup-or::after {
       display: inline-block;
       content: "";
       border-bottom: 1px solid rgb(189, 189, 189);
@@ -53,27 +53,27 @@
       transform: translateY(-0.30rem);
     }
     
-    #signup-email-header {
+    .signup-email-header {
       font-size: 18px;
       padding-bottom: 10px;
     }
   }
   
   
-  #signup-form {
+  .signup-form {
     font-size: 12px;
     
-    #signup-label {
+    .signup-label {
       line-height: 150%;
       font-weight: bold;
     }
     
-    #signup-input-box {
+    .signup-input-box {
       width: 100%;
       padding: 10px;
     }
     
-    #signup-terms {
+    .signup-terms {
       padding-top: 20px;
       padding-bottom: 20px;
       font-size: 10px;
@@ -82,7 +82,7 @@
       text-align: center;
     }
     
-    #form-signup-button {
+    .form-signup-button {
       background-color:rgb(29, 185, 84);
       padding: 15px 10px 15px 10px;
       border-radius: 500px;
@@ -94,14 +94,14 @@
       border: none;
     }
 
-    #form-signup-button:hover {
+    .form-signup-button:hover {
       background-color: rgb(32, 202, 92);
       color: white;
       cursor: pointer;
     } 
   } 
   
-  #login-redirect {
+  .login-redirect {
     display: flex;
     justify-content: center;
     font-size: 15px;
