--- a/app/assets/stylesheets/3-Login-Container.scss
+++ b/app/assets/stylesheets/3-Login-Container.scss
@@ -120,8 +120,6 @@
   
   .login-buttons {
     display: flex;
-  //   flex-direction: row;
-  //   border: 1px solid red;
     width: 300%;
     justify-content: center;
     
@@ -135,43 +133,38 @@
       border-radius: 100px;
       font-weight: 700;
       letter-spacing: 3px;
-      width: 50%;
+      width: 45%;
       color: white;
       text-transform: uppercase;
       border: none;
       margin-top: 20px;
+      margin-right: 15px;
     }
     
-  //   .form-login-button:hover {
-  //     background-color: rgb(32, 202, 92);
-  //     color: white;
-  //     cursor: pointer;
-  //   } 
+    .form-login-button:hover {
+      background-color: rgb(32, 202, 92);
+      color: white;
+      cursor: pointer;
+    } 
     
     .demo-login-button {
-      // display: flex;
-      // position: relative;
-      // left: 100%;
-      // flex-direction: column;
-      // align-items: center;
       background-color:rgb(58, 88, 151);
-      // justify-content: flex-start;
       padding: 15px 10px 15px 10px;
       border-radius: 100px;
       font-weight: 700;
       letter-spacing: 3px;
-      width: 50%;
+      width: 45%;
       color: white;
       text-transform: uppercase;
       border: none;
       margin-top: 20px;
     }
     
-  //   .demo-login-button:hover {
-  //     background-color: rgb(32, 202, 92);
-  //     color: white;
-  //     cursor: pointer;
-  //   } 
+    .demo-login-button:hover {
+      background-color: rgb(32, 202, 92);
+      color: white;
+      cursor: pointer;
+    } 
   }   
   
   .signup-redirect {
