--- a/app/assets/stylesheets/5-Sidebar-Component.scss
+++ b/app/assets/stylesheets/5-Sidebar-Component.scss
@@ -7,7 +7,7 @@
   height: 100%;
   overflow: hidden;
   padding-top: 10px;
-  position: absolute;
+  position: fixed;
   font-family: 'Montserrat', sans-serif;
   padding-left: 2%;
   font-size: 90%;
