--- a/app/assets/stylesheets/6-MusicPlayer-Component.scss
+++ b/app/assets/stylesheets/6-MusicPlayer-Component.scss
@@ -1,13 +1,14 @@
-.webplayer {
+.musicPlayer {
   background-color: rgb(18, 18, 18);
   color: white;
   width: 95%;
-  height: 100%;
   overflow: hidden;
   padding-top: 100px;
-  position: absolute;
+  position: fixed;
   font-family: 'Montserrat', sans-serif;
   padding-left: 5%;
+  margin-top: 40%;
   font-size: 300%;
-  margin-left: 25%;
+  bottom: 0%;
+  z-index: 4;
 }
