Change the session to show my current song. Debugged.

--- a/app/assets/stylesheets/6-MusicPlayer-Component.scss
+++ b/app/assets/stylesheets/6-MusicPlayer-Component.scss
@@ -1,13 +1,12 @@
 .musicPlayer {
-  background-color: rgb(18, 18, 18);
+  background-color: #282828;
   color: white;
   width: 95%;
   overflow: hidden;
-  padding-top: 100px;
+  padding-top: 10px;
   position: fixed;
   font-family: 'Montserrat', sans-serif;
   padding-left: 5%;
-  margin-top: 40%;
   font-size: 300%;
   bottom: 0%;
   z-index: 4;
