--- a/app/assets/stylesheets/7-Song-Index-Component.scss
+++ b/app/assets/stylesheets/7-Song-Index-Component.scss
@@ -11,8 +11,7 @@
   font-size: 100%;
   margin-left: 18%;
 
-  #playButton {
-    height: 10%;
-    width: 10%;
+  #button-logo {
+    height: 15%;
   }
 }
