--- a/app/assets/stylesheets/8-Search-Component.scss
+++ b/app/assets/stylesheets/8-Search-Component.scss
@@ -1,8 +1,8 @@
-.song-index {
+.search {
   background-color: rgb(18, 18, 18);
   color: white;
   width: 100%;
-  height: auto;
+  height: 100%;
   overflow: hidden;
   padding-top: 100px;
   position: absolute;
@@ -10,8 +10,4 @@
   padding-left: 3%;
   font-size: 100%;
   margin-left: 18%;
-
-  #button-logo {
-    height: 15%;
-  }
 }
