Change home component scss name to splash

--- a/app/assets/stylesheets/1-Navbar-Component.scss
+++ b/app/assets/stylesheets/1-Navbar-Component.scss
@@ -19,7 +19,7 @@
     align-items: center;
     flex-direction: row;
     justify-content: flex-start;
-    width: 25%;
+    width: 170px;
     height: auto;
     position: relative;
     padding-left: 45px;
@@ -32,7 +32,7 @@
     position: relative;
     align-items: center;
     align-content: space-between;
-    right: 100px;
+    right: 45px;
     width: 80%;
     
     .separator {
@@ -82,7 +82,7 @@
     align-items: center;
     flex-direction: row;
     justify-content: flex-start;
-    width: 25%;
+    width: 170.5px;
     height: auto;
     position: relative;
     padding-left: 45px;
@@ -116,7 +116,7 @@
     position: relative;
     align-items: center;
     align-content: space-between;
-    right: 100px;
+    right: 45px;
     width: 80%;
 
     .separator {
