--- a/app/assets/stylesheets/7-Song-Index-Component.scss
+++ b/app/assets/stylesheets/7-Song-Index-Component.scss
@@ -2,7 +2,7 @@
   background-color: rgb(18, 18, 18);
   color: white;
   width: 100%;
-  height: auto;
+  height: 100%;
   overflow: hidden;
   padding-top: 100px;
   position: absolute;
