Change stylesheet & link images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,24 @@
       window.fullLogo = "<%= image_url('Satisfy-Final-Logo.png') %>";
     </script>
     <script type="text/javascript">
+      window.splash6 = "<%= image_url('Eloise.JPG') %>";
+    </script>
+    <script type="text/javascript">
+      window.splash5 = "<%= image_url('homemadekazoku.JPG') %>";
+    </script>
+    <script type="text/javascript">
+      window.splash4 = "<%= image_url('horizons.JPG') %>";
+    </script>
+    <script type="text/javascript">
+      window.splash3 = "<%= image_url('tommisch.JPG') %>";
+    </script>
+    <script type="text/javascript">
+      window.splash2 = "<%= image_url('ylang_photo.JPG') %>";
+    </script>
+    <script type="text/javascript">
+      window.splash1 = "<%= image_url('junemarieezy2_photo.JPG') %>";
+    </script>
+    <script type="text/javascript">
       window.playButton = "<%= image_url('Spotify-Play-Button.png') %>";
     </script>
     <style>
