--- a/app/assets/stylesheets/1-Navbar-Component.scss
+++ b/app/assets/stylesheets/1-Navbar-Component.scss
@@ -2,8 +2,8 @@
   display: flex;
   background-color: black;
   font-family: 'Montserrat', sans-serif;
-  position: fixed;
-  width: 100%;
+  position: absolute;
+  width: 98.4%;
   z-index: 3;
   flex-direction: row;
   font-weight: bold;
