--- a/app/assets/stylesheets/8-Search-Component.scss
+++ b/app/assets/stylesheets/8-Search-Component.scss
@@ -1,13 +1,5 @@
-.search {
-  background-color: rgb(18, 18, 18);
-  color: white;
-  width: 100%;
+.search-results {
+  background-color: black;
   height: 100%;
-  overflow: hidden;
-  padding-top: 100px;
-  position: absolute;
-  font-family: 'Montserrat', sans-serif;
-  padding-left: 3%;
-  font-size: 100%;
-  margin-left: 18%;
+  width: 100%;
 }
