--- a/app/assets/stylesheets/6-MusicPlayer-Component.scss
+++ b/app/assets/stylesheets/6-MusicPlayer-Component.scss
@@ -1,20 +1,38 @@
 .musicPlayer {
   background-color: #282828;
   color: white;
-  width: 95%;
+  width: 100%;
   overflow: hidden;
-  padding-top: 10px;
   position: fixed;
   font-family: 'Montserrat', sans-serif;
-  padding-left: 5%;
   font-size: 300%;
   bottom: 0%;
   z-index: 4;
-  display: flex;
-  justify-content: center;
 
-  #audio {
-    height: 300px;
-    width: 300px;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  
+  padding-bottom: 20px;
+
+}
+
+#pButton {
+  cursor: default;
+  color: white;
+  font-size: 50px;
+  padding: 20px;
+}
+
+#pButton:hover {
+  cursor: default; 
+  color: white;
+  transform: scale(1.1);
+}
+
+.pButton-container {
+  width: 60px;
+  height: 60px;
+  padding: 10px;
 }
