--- a/app/assets/stylesheets/7-Song-Index-Component.scss
+++ b/app/assets/stylesheets/7-Song-Index-Component.scss
@@ -2,13 +2,13 @@
   position: absolute;
   background-color: rgb(18, 18, 18);
   color: white;
-  width: 79.4%;
-  height: 100%;
-  overflow: hidden;
-  margin-top: 80px;
-  margin-left: 19%;
-  padding: 10px;
   font-family: 'Montserrat', sans-serif;
+  overflow: hidden;
+
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  z-index: 0;
 
   .song-index {
     position: relative;
@@ -17,8 +17,8 @@
     width: 40px;
   
     .button-logo {
-      height: 100px;
-      width: 100px;
+      height: 50px;
+      width: 50px;
     }
   }
 }
